Current Version
---------------

----- cvs ci ------
Wed May 17 22:14:00 UTC 2000
sms:
* added smapi to Makefile
 
----- cvs ci ------
Mon May  8 17:40:14 NOVST 2000
max (patch from Alex Bronin):
* MS Visual C porting

----- cvs ci ------
Thu Mar 23 10:15:52 MSK 2000
max (patch from Serguei Revtov):
- change Win makefile to compile with new includes

----- cvs ci ------
Mon Mar 20 08:56:28 MSK 2000
max (patch from Serguei Revtov):
- change legacy SUN makefile to compile with new includes, simplifying

Mo   7 Feb 2000 00:07:24 CET
tobi:
- Nodediff and -list update files were not rejected if they contained an
  invalid header line (even though this invalid line was detected).

So   2 Jan 2000 11:28:26 CET
tobi:
- When nldiff was invoked with a nodediff filename that had the same
  extension as the nodelist filename (obviously an user error) and the -n
  parameter was given, the original nodelist was deleted. Fixed.

Tue Dec 28 21:39:50 MET 1999
tobi:
- Fixed bug on Unix that could, in the situation that a nodelist and two 
  consequent nodediffs were found, lead to the situation that only the
  first nodediff was applied, but not the second one. (On a consecutive
  run, though, of course the second one was also applied).

Tue Dec 28 19:25:59 MET 1999
ml:
- Removed some unnecessary variables
- Added makefile for Watcom C for Windows

Tue 30 Nov 1999 22:10:01 CET
sms:
- fixed some misuses of ++ in ulcomp.c
(Remark by TE: I don't think those caused any problems, they were both
 ANSI and K&R proofed)

NLTOOLS 1.0 Public Release
--------------------------

Sun 28 Nov 1999 03:00:00 CET
tobi:
- lots of last minute bug fixes, cleaned up everything, prepared for release

Di  16 Nov 1999 23:19:07 CET
tobi:
- fixed problem that only occured with IBM C compilers.
	
Wed Oct 13 10:49:05 MET DST 1999 
mtt:
- fixed makefile.sun
- added include of stddef.h (where size_t is defined) to string.c

Wed Oct 13 10:31:36 MET DST 1999
mtt:
- fixed typo in linux makefile
- added sun makefile