@@ -20,14 +20,14 @@ nldiff.exe: nldiff.o crc16.o
 nlcrc.exe: crc16.o nlcrc.o
 	$(CC) $(LFLAGS) -o nlcrc.exe crc16.o nlcrc.o
 
-ulc.exe: ulcsort.o ulcomp.o ulc.o nllog.o string.o nldate.o julian.o nlfind.o patmat.o fexist.o
-	$(CC) $(LFLAGS) -o ulc.exe ulcsort.o ulcomp.o ulc.o nllog.o string.o nldate.o julian.o nlfind.o patmat.o fexist.o -lfconfemx
+ulc.exe: ulcsort.o ulcomp.o ulc.o nllog.o string.o nldate.o julian.o nlfind.o patmat.o fexist.o trail.o
+	$(CC) $(LFLAGS) -o ulc.exe ulcsort.o ulcomp.o ulc.o nllog.o string.o nldate.o julian.o nlfind.o patmat.o fexist.o trail.o -lfconfemx
 
-nlupdate.exe: nlupdate.o nllog.o string.o nldate.o julian.o nlfind.o patmat.o
-	$(CC) $(LFLAGS) -o nlupdate.exe nlupdate.o nllog.o string.o nldate.o julian.o nlfind.o patmat.o fexist.o -lfconfemx
+nlupdate.exe: nlupdate.o nllog.o string.o nldate.o julian.o nlfind.o patmat.o trail.o
+	$(CC) $(LFLAGS) -o nlupdate.exe nlupdate.o nllog.o string.o nldate.o julian.o nlfind.o patmat.o fexist.o trail.o -lfconfemx
 
 clean:
-	-rm crc16.o nlcrc.o nldiff.o ulc.o ulcomp.o ulcsort.o nllog.obk nldate.o julian.o nlfind.o nlupdate.o nllog.o string.o patmat.o fexist.o
+	-rm crc16.o nlcrc.o nldiff.o ulc.o ulcomp.o ulcsort.o nllog.obk nldate.o julian.o nlfind.o nlupdate.o nllog.o string.o patmat.o fexist.o trail.o
 
 distclean: clean
 	-del nlcrc.exe
