@@ -4,7 +4,7 @@
 
 default: nldiff.exe nlcrc.exe ulc.exe nlupdate.exe
 
-CC=i386--mingw32-gcc
+CC=i386-mingw32-gcc
 CFLAGS=-O3 -I../.. -DNT -DWINNT
 LFLAGS=-O3 -L../../fidoconf
 
@@ -20,11 +20,11 @@ nldiff.exe: nldiff.o crc16.o
 nlcrc.exe: crc16.o nlcrc.o
 	$(CC) $(LFLAGS) -o nlcrc.exe crc16.o nlcrc.o
 
-ulc.exe: ulcsort.o ulcomp.o ulc.o nllog.o string.o nldate.o julian.o nlfind.o patmat.o ffind.o fexist.o
-	$(CC) $(LFLAGS) -o ulc.exe ulcsort.o ulcomp.o ulc.o nllog.o string.o nldate.o julian.o nlfind.o patmat.o ffind.o fexist.o ../../fidoconf/libfidoconfigmgw.a
+ulc.exe: ulcsort.o trail.o ulcomp.o ulc.o nllog.o string.o nldate.o julian.o nlfind.o patmat.o ffind.o fexist.o
+	$(CC) $(LFLAGS) -o ulc.exe ulcsort.o trail.o ulcomp.o ulc.o nllog.o string.o nldate.o julian.o nlfind.o patmat.o ffind.o fexist.o ../../fidoconf/libfidoconfigmgw.a
 
-nlupdate.exe: nlupdate.o nllog.o string.o nldate.o julian.o nlfind.o patmat.o ffind.o fexist.o
-	$(CC) $(LFLAGS) -o nlupdate.exe nlupdate.o nllog.o string.o nldate.o julian.o nlfind.o patmat.o ffind.o fexist.o ../../fidoconf/libfidoconfigmgw.a
+nlupdate.exe: nlupdate.o nllog.o trail.o string.o nldate.o julian.o nlfind.o patmat.o ffind.o fexist.o
+	$(CC) $(LFLAGS) -o nlupdate.exe nlupdate.o trail.o nllog.o string.o nldate.o julian.o nlfind.o patmat.o ffind.o fexist.o ../../fidoconf/libfidoconfigmgw.a
 
 clean:
 	-rm crc16.o nlcrc.o nldiff.o ulc.o ulcomp.o ulcsort.o nllog.obj nldate.o julian.o nlfind.o nlupdate.o nllog.o patmat.o ffind.o fexist.o string.o
