@@ -4,8 +4,8 @@
 default: nldiff nlcrc ulc nlupdate
 
 CC=cc
-CFLAGS=-g -I../.. -DUNIX
-LFLAGS=-g -L../../fidoconf
+CFLAGS=-I../.. -DUNIX
+LFLAGS=-L../../fidoconf
 
 .c.o: 
 	$(CC) $(CFLAGS) -c $<
@@ -16,14 +16,14 @@ nldiff: nldiff.o crc16.o
 nlcrc: crc16.o nlcrc.o
 	$(CC) $(LFLAGS) -o nlcrc crc16.o nlcrc.o
 
-ulc: ulcsort.o ulcomp.o ulc.o nllog.o string.o nldate.o julian.o nlfind.o patmat.o ffind.o fexist.o
-	$(CC) $(LFLAGS) -o ulc ulcsort.o ulcomp.o ulc.o nllog.o string.o nldate.o julian.o nlfind.o patmat.o  ffind.o fexist.o -lfidoconfigunix
+ulc: ulcsort.o ulcomp.o ulc.o nllog.o string.o nldate.o julian.o nlfind.o trail.o patmat.o ffind.o fexist.o
+	$(CC) $(LFLAGS) -o ulc ulcsort.o ulcomp.o ulc.o nllog.o string.o nldate.o julian.o nlfind.o trail.o patmat.o  ffind.o fexist.o -lfidoconfigunix
 
-nlupdate: nlupdate.o nllog.o string.o nldate.o julian.o nlfind.o ffind.o fexist.o
-	$(CC) $(LFLAGS) -o nlupdate nlupdate.o nllog.o string.o nldate.o julian.o nlfind.o patmat.o ffind.o fexist.o -lfidoconfigunix
+nlupdate: nlupdate.o nllog.o string.o nldate.o julian.o nlfind.o ffind.o fexist.o trail.o patmat.o
+	$(CC) $(LFLAGS) -o nlupdate nlupdate.o nllog.o string.o nldate.o julian.o nlfind.o trail.o patmat.o ffind.o fexist.o -lfidoconfigunix
 
 clean:
-	-rm crc16.o nlcrc.o nldiff.o ulc.o ulcomp.o ulcsort.o nllog.o julian.o nlfind.o nldate.o nlupdate.o string.o patmat.o ffind.o fexist.o
+	-rm crc16.o nlcrc.o nldiff.o ulc.o ulcomp.o ulcsort.o nllog.o julian.o nlfind.o nldate.o nlupdate.o string.o trail.o patmat.o ffind.o fexist.o
 
 
 distclean: clean
@@ -31,12 +31,4 @@ distclean: clean
 	-rm nldiff
 	-rm ulc
 	-rm nlupdate
-
-install:
-	cp ulc $(INSTDIR)/ulc
-	cp nldiff $(INSTDIR)/nldiff
-	cp nlcrc $(INSTDIR)/nlcrc
-	cp nlupdate $(INSTDIR)/nlcrc
-
-
 
