@@ -1,6 +1,6 @@
 LINK=wlink
 CC=wcl386
-CFLAGS=-I..\.. -zq -wx -bt=nt -l=nt
+CFLAGS=-I..\.. -zq -wx -bt=nt -l=nt -DNT -DWINNT -D__NT__
 COPT = -oneatx -5
 LFLAGS=
 
@@ -17,11 +17,13 @@ nldiff.exe: nldiff.obj crc16.obj
 nlcrc.exe: crc16.obj nlcrc.obj
 	$(LINK) $(LFLAGS) NAME nlcrc.exe FILE crc16.obj, nlcrc.obj
 
-ulc.exe: ulcsort.obj ulcomp.obj ulc.obj nllog.obj string.obj julian.obj nldate.obj nlfind.obj patmat.obj
-	$(LINK) $(LFLAGS) NAME ulc.exe FILE ulcsort.obj, ulcomp.obj, ulc.obj, nllog.obj, string.obj, julian.obj, nldate.obj, nlfind.obj, patmat.obj LIBRARY ..\..\fidoconf\fconfwcw.lib LIBRARY ..\..\smapi\smapiwcw.lib
+ulc.exe: ulcsort.obj ulcomp.obj ulc.obj nllog.obj string.obj julian.obj nldate.obj nlfind.obj patmat.obj trail.obj fexist.obj
+	$(LINK) $(LFLAGS) NAME ulc.exe FILE ulcsort.obj, ulcomp.obj, ulc.obj, nllog.obj, string.obj, julian.obj, fexist.obj, nldate.obj, nlfind.obj, trail.obj, patmat.obj LIBRARY ..\..\fidoconf\fconfwcw.lib
 
-nlupdate.exe: nlupdate.obj nllog.obj string.obj nldate.obj julian.obj nlfind.obj patmat.obj
-	$(LINK) $(LFLAGS) NAME nlupdate.exe FILE nlupdate.obj, nllog.obj, string.obj, nldate.obj, julian.obj, nlfind.obj, patmat.obj LIBRARY ..\..\fidoconf\fconfwcw.lib LIBRARY ..\..\smapi\smapiwcw.lib
+nlupdate.exe: nlupdate.obj nllog.obj string.obj nldate.obj julian.obj nlfind.obj patmat.obj trail.obj fexist.obj
+	$(LINK) $(LFLAGS) NAME nlupdate.exe FILE nlupdate.obj, fexist.obj, nllog.obj, string.obj, nldate.obj, julian.obj, nlfind.obj, patmat.obj, trail.obj LIBRARY ..\..\fidoconf\fconfwcw.lib
+
+.IGNORE
 
 clean:
 	del *.obj
